# NonEuclidean

./: Cargo.toml
app/: Cargo.toml  build.rs
app/shaders/: full_screen_quad.slang
app/shaders/include/: triangles.slang
app/src/: main.rs
rendering/: Cargo.toml
rendering/src/: device.rs  instance.rs  lib.rs  surface.rs
shaders/: full_screen_quad.slang
src/: buffer.rs  device.rs  lib.rs  shader.rs  swapchain.rs
