[workspace]
resolver = "3"
members = ["app", "rendering"]

[workspace.dependencies]
ash = { version = "0.38.0" }
bytemuck = { version = "1.24.0", features = ["derive"] }
gpu-allocator = { version = "0.28.0", default-features = false, features = [
    "std",
    "vulkan",
] }
rendering = { path = "rendering" }
scope-guard = { version = "1.2.0" }
winit = { version = "0.30.12" }

[workspace.lints]
